--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,8 @@ default: &default
 development:
   <<: *default
   database: todolist_development
+  username: suman
+  password: nopassword
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -80,6 +82,6 @@ test:
 #
 production:
   <<: *default
-  database: todolist_production
+  database: myapp_db
   username: suman
   password: nopassword
